<resources>
    <string name="app_name">PureCitizen</string>
    <string name="button">Button</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="hello_world">Hello World</string>
    <string name="send">Send</string>
    <string name="submit">Submit</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email"> Email</string>
    <string name="prompt_password"> Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="send_token_to_server_and_return_user">Send token to server and return user</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First name</string>
    <string name="title_activity_post_edit">PostEditActivity</string>
    <string name="title">Title</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
</resources>
